nivasa-macros/tests/trybuild/controller_response_metadata_invalid_http_code.rs
use nivasa_macros::{controller, impl_controller};

#[controller("/users")]
struct UsersController;

#[impl_controller]
impl UsersController {
    #[nivasa_macros::post("/create")]
    #[nivasa_macros::http_code(99)]
    fn create(&self) {}
}

fn main() {}
